[package]
name = "wpfg"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inferno = { git="https://github.com/daniellockyer/inferno/", branch="collapse-xdebug" }
rocket = "0.4.0"
rocket_contrib = "0.4.0"
