[package]
name = "perfutils"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/perfutils"
homepage = "https://github.com/daniellockyer/perfutils"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inferno = { git="https://github.com/daniellockyer/inferno/", branch="collapse-xdebug" }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
